package com.swp391.horseracing.entity.enums;

public enum Role {
    HORSE_OWNER,
    JOCKEY,
    REFEREE,
    SPECTATOR,
    ADMIN
}
