package com.swp391.horseracing.entity.enums;

public enum UserStatus {
    ACTIVE,
    INACTIVE,
    BANNED
}
